Fixed font weights being too light.
Closes 101

--- a/res/css/app.css
+++ b/res/css/app.css
@@ -43,7 +43,7 @@ audio:not([controls]) {
 
 html {
   font-family: 'Roboto', sans-serif;
-  font-weight: 100;
+  font-weight: 400;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -296,7 +296,7 @@ html {
 body {
   font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
-  font-weight: 100;
+  font-weight: 400;
   line-height: 1.428571429;
   color: #333333;
   background-color: #f7f7f7;
