--- a/res/css/fonts.css
+++ b/res/css/fonts.css
@@ -1,12 +1,6 @@
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'), url(roboto-thin.woff) format('woff');
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
   src: local('Roboto Regular'), local('Roboto-Regular'), url(roboto-regular.woff) format('woff');
 }
